--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
+<html lang="es-mx">
 
 <head>
+    <title>Práctica 1</title>
 </head>
 
 <body>
+    <footer>
+    </footer>
 </body>
 
-<footer>
-</footer>
+</html>
